--- a/obedience.ipynb
+++ b/obedience.ipynb
@@ -7,7 +7,7 @@
     "# Should Robots Be Obedient?\n",
     "\n",
     "This is the accompanying Jupyter notebook for the paper  \n",
-    "*\"Should Robots Be Obedient?\" Smitha Milli, Dylan Hadfield-Menell, Anca Dragan, and Stuart Russell.* [arxiv]()\n",
+    "*\"Should Robots Be Obedient?\"* Smitha Milli, Dylan Hadfield-Menell, Anca Dragan, and Stuart Russell. IJCAI 2017. [arxiv](https://arxiv.org/abs/1705.09990)\n",
     "\n",
     "Every experiment in the paper can be replicated by running this notebook. In addition, it should be easy to play around and explore your own ideas."
    ]
@@ -681,7 +681,7 @@
    "source": [
     "# Questions, comments, changes?\n",
     "\n",
-    "Submit an issue or pull request."
+    "Send me an email (smilli @ berkeley.edu) or submit an issue / pull request."
    ]
   }
  ],
